# icb-app

./: .env  .gitignore  MANIFEST.in  README.md  docker-compose.yml  docker-entrypoint.sh
backend/: .env  Dockerfile  pyproject.toml
backend/backend/: settings.py  urls.py
backend/backend/api/: serializers.py  urls.py  views.py
backend/backend/data/: admin.py  apps.py  models.py
backend/backend/data/migrations/: 0001_initial.py  0002_player_city_player_home_arcade_player_instagram_and_more.py  0003_player_instagram_handle_player_twitch_handle_and_more.py  0004_remove_player_instagram_remove_player_twitch_and_more.py  0005_rename_instagram_handle_player_instagram_and_more.py
backend/backend/game/: admin.py  apps.py  models.py  tests.py
backend/backend/game/management/commands/: reset_primary_keys.py
backend/backend/game/migrations/: 0001_initial.py  0002_loop_end_time.py  0003_loop_start_time.py  0004_hole_end_time_hole_start_time.py  0005_alter_hole_hole_score.py
backend/backend/management/commands/: check_game_session_pk.py  reset_game_session_pk.py  reset_pk.py
backend/static/js/: form.js
backend/staticfiles/css/: styles.css
backend/staticfiles/js/: script.js
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  MasterContainer.css
frontend/src/components/: Button.jsx  ButtonContainer.jsx  GameContainer.jsx  LoginPage.js  MasterContainer.jsx  ProfileContainer.jsx  ScoreContainer.jsx  SocialMediaHandles.jsx  StatCard.jsx
frontend/src/hooks/: useScore.jsx
(+31 files in other folders)
